--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "pale",
   "version": "1.0.0",
   "description": "",
-  "main": "color.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
