--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npm install && node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,10 @@
     "url": "https://github.com/nadr0/pale/issues"
   },
   "homepage": "https://github.com/nadr0/pale",
+  "dependencies" : {
+      "express": "^4.14.1",
+      "socket.io": "^1.7.3"
+  },
   "devDependencies": {
     "express": "^4.14.1",
     "socket.io": "^1.7.3"
